--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^2.1.1",
     "gulp-prettify": "^0.3.0",
+    "gulp-remove-empty-lines": "0.0.2",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.1"
   }
