--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  jekyll
 permalink: /:year/:title/
 markdown: kramdown
 include: [".htaccess"]
-exclude: ["bower_components", "node_modules", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "css/_breakpoints", "LICENSE", "README.md"]
+exclude: ["bower_components", "node_modules", "Gemfile", "*.lock", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "css/_breakpoints", "LICENSE", "README.md"]
 
 
 gems:
