--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,5 @@
 title: Your awesome title
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: ""
+description: You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 url: "http://yourdomain.com"
 
 twitter_username: jekyllrb
@@ -15,12 +11,21 @@ markdown: kramdown
 include: [".htaccess"]
 exclude: ["bower_components", "node_modules", "Gemfile", "*.lock", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "css/_breakpoints", "LICENSE", "README.md"]
 
-
 gems:
 - jekyll-assets
 
 assets:
   prefix: "/assets"
+  sources:
+   - _assets/css
+   - _assets/images
+   - _assets/javascripts
+   - _assets/stylesheets
+   - _assets/fonts
+   - _assets/img
+   - _assets/js
+  features:
+    liquid: true
 
 # collections:
 #     projects:
