--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Your awesome title
+title: Test Jekyll
 description: You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 url: "http://yourdomain.com"
 
