--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,11 @@
 title: Hello World
 description: Foobar
 markdown: kramdown
-permalink: journal/:year/:title
+permalink: /posts/:title
 exclude: ["bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "css/_breakpoints", "LICENSE", "README.md"]
+
+gems:
+  - jekyll-sitemap
 
 collections:
   posts:
