--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-prettify": "^0.3.0",
     "gulp-remove-empty-lines": "0.0.2",
     "gulp-sass": "^2.0.4",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.1"
   }
