--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: jekyllrb
 github_username:  jekyll
 
+gems:
+  - jekyll-sitemap
 
 # Dependancies
 
