--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "gulp-remove-empty-lines": "0.0.2",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.5.2",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.1"
+    "gulp-uglify": "^1.5.3"
   },
   "license": "MIT",
   "repository": {
