--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "child_process": "^1.0.2",
-    "del": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.0.0",
     "gulp-clean-css": "^3.0.4",
@@ -10,8 +9,7 @@
     "gulp-remove-empty-lines": "0.0.2",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.5.2",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7"
+    "gulp-uglify": "^1.5.3"
   },
   "license": "MIT",
   "repository": {
