--- a/travis.yml
+++ b/travis.yml
@@ -1,8 +1,9 @@
-language: node_js
-node_js:
-  - "stable"
-install:
+language: ruby
+rvm:
+  - 2.2
+before_install:
   - gem install bundle jekyll
+  - npm install
 before_script:
   - npm install -g gulp
 script: gulp travis
