--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-language: node_js
-node_js:
-  - "stable"
+language: ruby
+rvm:
+  - 2.4.1
+before_install:
+  - gem install bundle jekyll
+  - npm install
+before_script:
+  - npm install -g gulp
 script: gulp travis
 
