--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ sudo: false
 rvm:
   - 2.4.1
 before_install:
-  - gem install bundle jekyll
+  - gem install jekyll
 install:
   - bundle install
-before_script:
-  - npm install
 script: gulp travis
 
