--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "jekyll-starter",
+  "author": "Dave Santos <info@davesantos.com> (https://davesantos.com/)",
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "child_process": "^1.0.2",
@@ -8,7 +10,7 @@
     "gulp-prettify": "^0.5.0",
     "gulp-remove-empty-lines": "0.0.8",
     "gulp-sass": "^3.1.0",
-    "gulp-shell": "^0.6.3",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.1.2"
   },
   "license": "MIT",
