--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "jekyll-starter",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "browser-sync": "^2.9.11",
+    "browser-sync": "^2.18.12",
+    "child_process": "^1.0.2",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
-    "gulp-prettify": "^0.5.0",
-    "gulp-remove-empty-lines": "0.0.8",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-prettify": "0.5.0",
+    "gulp-remove-empty-lines": "0.1.0",
+    "gulp-sass": "4.0.1",
+    "gulp-shell": "0.6.5",
+    "gulp-uglify": "3.0.0"
   },
   "license": "MIT",
   "repository": {
