--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ sass:
 
 # Don't forget trailing slash or it won't work on test server
 permalink: :year/:title/
-exclude: ["Gemfile", "modernizr-config.json", "*.lock", "bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "LICENSE", "README.md"]
+exclude: ["Gemfile", "modernizr-config.json", "*.lock", "bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json", "package-lock.json","*.sublime-project", "*.sublime-workspace", "*.log", "LICENSE", "README.md"]
 
 # Build settings
 markdown: kramdown
