--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "jekyll-starter",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "browser-sync": "^2.18.12",
+    "browser-sync": "2.23.7",
     "child_process": "^1.0.2",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.0.4",
+    "gulp": "3.9.1",
+    "gulp-clean-css": "3.9.3",
     "gulp-prettify": "0.5.0",
     "gulp-remove-empty-lines": "0.1.0",
     "gulp-sass": "4.0.1",
