--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jekyll-starter",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "browser-sync": "2.23.7",
+    "browser-sync": "^2.24.6",
     "child_process": "^1.0.2",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.0",
     "gulp-clean-css": "3.9.3",
     "gulp-prettify": "0.5.0",
     "gulp-remove-empty-lines": "0.1.0",
