--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
   - bundle install
 before_script:
-  - npm install -g gulp
+  - npm install -g gulp-cli
   - npm install
 script: gulp travis
 
