--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.1"
   },
+  "dependencies": {
+    "debug": "^3.1.0",
+    "lodash": "^4.17.10"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
