--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ baseurl: /
 title: Hello World
 description: Foobar
 markdown: kramdown
-exclude: ["Gemfile", "modernizr-config.json", "*.lock", "bower_components", "node_modules", "gulpfile.js", "package.json", "package-lock.json","*.sublime-project", "*.sublime-workspace", "*.log", "LICENSE", "README.md"]
 plugins:
   - jekyll-sitemap
 
 # Don't forget trailing slash or it won't work on test server
-permalink: :year/:title/
+# Uncommenting permalink messes up '404.html' for Github Pages
+# permalink: :year/:title/
 
-# Github pages only runs in safe mode
+# Github Pages only runs in safe mode
 safe: true
 
 sass:
@@ -59,5 +59,26 @@ compress_html:
 #   asset_path: /uploads/
 
 opengraph: false
+
+#------------------------------------------------------------
+#
+#  Excludes
+#
+#------------------------------------------------------------
+
+exclude:
+  - "*.lock"
+  - "*.log"
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - Gemfile
+  - LICENSE
+  - README.md
+  - bower_components
+  - gulpfile.js
+  - modernizr-config.json
+  - node_modules
+  - package-lock.json
+  - package.json
 
 
