--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "jekyll-starter",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "browser-sync": "^2.24.7",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
@@ -10,10 +13,6 @@
     "gulp-remove-empty-lines": "0.1.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.1"
-  },
-  "dependencies": {
-    "debug": "^3.1.0",
-    "lodash": "^4.17.10"
   },
   "license": "MIT",
   "repository": {
