Add gulpfile.bable.js to exclude

--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ exclude:
   - README.md
   - bower_components
   - gulpfile.js
+  - gulpfile.babel.js
   - modernizr-config.json
   - node_modules
   - package-lock.json
