--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "child_process": "^1.0.2",
-    "gulp": "^4.0.0",
-    "gulp-clean-css": "3.10.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-htmltidy": "^0.2.4",
     "gulp-remove-empty-lines": "0.1.0",
-    "gulp-sass": "4.0.1",
-    "gulp-uglify": "3.0.1",
-    "node-sass": "^4.9.4"
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.12.0"
   },
   "license": "MIT",
   "repository": {
@@ -26,6 +26,6 @@
     ]
   },
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.1"
   }
 }
