--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
       "env"
     ]
   },
+  "scripts": {
+    "build": "bundle exec jekyll build",
+    "clean": "bundle exec jekyll clean",
+    "serve": "bundle exec jekyll serve"
+  },
   "dependencies": {
     "normalize.css": "^8.0.1"
   }
